Fix component overflow prop

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/newsletter-setup/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/newsletter-setup/style.scss
@@ -94,13 +94,13 @@ $border-radius: 4px;
 		}
 
 		.newsletter-setup__contrast-warning {
-			z-index: 1;
 			display: flex;
 			font-size: $font-body-small;
 			height: 0;
 			transition: height 0.5s ease-in-out, opacity 0.5s ease-in-out;
 			opacity: 0;
 			margin-top: 16px;
+			overflow: hidden;
 
 			&.is-visible {
 				height: 80px;
@@ -119,7 +119,6 @@ $border-radius: 4px;
 
 		.newsletter-setup__submit-button {
 			border-radius: $border-radius;
-			z-index: 2;
 		}
 	}
 }
